# carwash-queue

backend/: CMakeLists.txt  main.cpp  server
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
